--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ MarkupSafe==2.1.5
 openai==1.42.0
 packaging==24.1
 pillow==10.4.0
+psycopg2-binary==2.9.9
 pycparser==2.22
 pycryptodomex==3.20.0
 pydantic==2.8.2
